<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="ST110_Axis" Id="{d4c50d7c-46ea-495c-b473-4d90b6d670c9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    const110_01Y : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 650, VELO_MAX := 2000, VELO_MANU := 100);
	const110_02Z : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 650, VELO_MAX := 2000, VELO_MANU := 50);
	const110_03Z : AxisLinMotConst_t := (POS_MIN := -5, POS_MAX := 650, VELO_MAX := 2000, VELO_MANU := 50);

END_VAR
VAR_GLOBAL
    axis110_01Y : AxisLinMot_t;
    axis110_02Z : AxisBeckhoff_t;
    axis110_03Z : AxisBeckhoff_t;
END_VAR
VAR_GLOBAL RETAIN
	// Recipe values are managed elsewhere
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>